# modelo_ML_queimadas

./: .env_example  .gitignore  README.md  compose.yaml  main.py  pyproject.toml  teste.py
docs/: CALCULOS.md  ML.md  TRATAMENTO_DADOS.md  UTILS.md  UTILS_GIT.md
modelo_ml_queimadas/: __init__.py  database.py  settings.py
modelo_ml_queimadas/app/core/: database.py  settings.py
modelo_ml_queimadas/app/models/: dados_inpe.py
modelo_ml_queimadas/app/schemas/: schema.py
modelo_ml_queimadas/models/: base_model.py
source/: carregar_dados.py
source/app/core/: settings.py
source/app/models/: base_model.py
source/core/: database.py  settings.py
source/models/: __init__.py  dados_inpe.py  data_csv.py
source/resources/: logging.py  tools.py
