[project]
name = "modelo-ml-queimadas"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiznuness",email = "lg.nunes.souza2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "psycopg[binary] (>=3.3.1,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
