[project]
name = "modelo-ml-queimadas"
version = "0.1.0"
description = ""
authors = [
    {name = "Luiznuness",email = "lg.nunes.souza2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]

sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
pydantic = "^2.12.5"
pandas = "^2.3.3"
numpy = "^2.3.0"
scikit-learn = "^1.7.2"
pydantic-settings = "^2.12.0"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
